# craytrace

./: CMakeLists.txt  README.md
src/: colors.hpp  craytrace.cpp  craytrace.hpp  dependencies.hpp  main.cpp  materials.cpp  materials.hpp  objects.cpp  objects.hpp
